--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2,7 +2,7 @@
 /*
 Template Name: Preclinic - Responsive Bootstrap 5 Admin Dashboard
 Version: 1.0.0
-Author: Dreams Technologies
+Author: Muhammad Awais
 Author URL: https://themeforest.net/user/dreamstechnologies
 */
 /****** Utils ******/
